# PiCNN

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  main
lib/NeuralNetwork/: CMakeLists.txt  Makefile  tensor.cpp  tensor.h  tensornetwork.cpp  tensornetwork.h
tests/Hello_NeuralNet/: main.cpp
